# ModelosFoliatti

./: .gitignore  Dockerfile  environment.yml  pyproject.toml  requirements.txt
data/: cluster_esmeralda.csv  cluster_irapuato.csv  cluster_satelite.csv  data-ajijic.csv  data-allende.csv  data-esmeralda.csv  data-estancia.csv  data-irapuato.csv  data-neza.csv  data-satelite.csv  data_general.csv  data_general_2.csv
models/: bet_model.h5  bet_model.pkl  bet_scaler.pkl  bet_total_pipeline_regressor_foliat÷tiGeneral_v1.pkl  final_amount_model_rf.pkl  final_amount_scaler.pkl  games_played_model_mlp.pkl  games_played_scaler.pkl  target_games_played_scaler.pkl  tiempo_model.h5  tiempo_model.pkl  tiempo_scaler.pkl  time_on_device_pipeline_regressor_foliattiGeneral_v1.pkl  win_model.h5  win_model.pkl  win_scaler.pkl  win_total_pipeline_regressor_foliattiGeneral_v1.pkl
notebooks/: PCA-General copy.ipynb  PCA-General.ipynb  analysis_clusters.ipynb  analysis_clusters_NuevoLeon.ipynb  assign_cluster.ipynb  edad.ipynb  modelos.ipynb
notebooks/EDOMX/: Cluster-Esmeralda.ipynb  Cluster-Neza.ipynb  Cluster-Satelite.ipynb
notebooks/EdoMex/: Cluster-Esmeralda.ipynb
notebooks/Irapuato/: Cluster-Irapuato.ipynb
notebooks/Jalisco/: Cluster-Ajijic.ipynb
notebooks/Nuevo Leon/: Cluster-Allende.ipynb  Cluster-Guadalupe.ipynb  Cluster-Mitras.ipynb  Cluster-NL.ipynb  Cluster-Sendero.ipynb
notebooks/modelos_prediccion/: bet_total_new.ipynb  class_time_on_device.ipynb  classification_models.ipynb  games_played.ipynb  (+8 more)
scripts/: remove_outliers.py  trendline.py
src/: app.py  func.py
(+24 files in other folders)
